<resources>
    <string name="app_name">Examen2_Moviles</string>
    <string name="welcome">Welcome to Los Portales Taquería</string>
    <string name="direccion">LOS PORTALES #1 - 1207 S KERR AVE</string>
    <string name="menu">Menu</string>

    <string name="Heriberto">Heriberto Imperial Badillo</string>
    <string name="Lorenzo">Lorenzo Euan Aispuro</string>
    <string name="Carlos">Carlos Jesus Chaira Telles</string>


    <!--Menu Texto Repetitivo-->
    <string name="signodinero">$</string>
    <string name="obligatorio">(Obligatorio)</string>
    <string name="agregarpedido">Agregar al pedido</string>
    <string name="instruespeciales">Instrucciones especiales</string>
    <string name="textoinstrucespeciales">Añada aquí los comentarios sobre este producto</string>
    <string name="cantidad">Cantidad</string>

    <!--Tacos-->
    <string name="tacos">Tacos</string>

    <string name="tacotradicional">Taco Tradicional</string>
    <string name="tacotradicionaleng">Traditional Taco</string>

    <!--Variante taco tradicional-->
    <string name="choiceofmeat">Choice of Meat</string>
    <string name="asada">Asada / Beef Steak</string>
    <string name="pollo">Pollo / Chicken</string>
    <string name="carnitas">Carnitas / Pulled Pork</string>
    <string name="chorizo">Chorizo / Mexican Sausage</string>
    <string name="suadero">Suadero / Shredded Beef</string>
    <string name="buche">Buche / Pork Stomach</string>
    <string name="pastor">Al Pastor / Marinated Pork</string>
    <string name="cachete">Cachete / Beef Cheek</string>
    <string name="barbacoa">Barbacoa / BBQ</string>
    <string name="tripa">Tripa / Beef Intestine</string>
    <string name="chicharron">Chicharron / Pork Rinds</string>
    <string name="cueritos">Cueritos / Pork Skin</string>
    <string name="lengua">Lengua</string>

    <string name="rice">Rice</string>
    <string name="beans">Beans</string>
    <string name="quesomozzarella">Queso Mozzarella</string>
    <string name="quesofresco">Queso Fresco</string>

    <string name="tacopescado">Taco de Pescado</string>
    <string name="tacopescadoeng">Fish Taco</string>

    <!--Antojitos-->

    <string name="quesadillas">Quesadillas</string>
    <string name="quesadillasdesc">Rellenas con su carne favorita, servidas con ensalada. Filled with your choice of meat, served with salad.</string>

    <!--Variante taco tradicional-->
    <string name="tamanio">Tamaño</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>

    <string name="huarache">Huaraches</string>
    <string name="huarachedesc">Tortilla gruesa con frijoles, tu carne favorita, lechuga, queso frescoy crema. Big Thick tortilla with beans, your choice of meta, fresh cheese, and sour cream.</string>

    <string name="gringas">Gringas</string>
    <string name="gringasdesc">Tortilla de harina con queso, carne al pastor y piña. Flour tortilla with cheese marinated pork and pineapple.</string>

    <string name="sincronizadas">Sincronizadas</string>
    <string name="sincronizadasdesc">Tortilla de harina rellena con queso y jamon. Se sirve con lechuga, cream guacamole. Sandwich of Two four tortillas filled with ham and cheese. Served with lettuce, sour cream, and guacamole.</string>

    <string name="sopes">Sopes</string>
    <string name="sopesdesc">Tortilla gruesa cubierta de frijoles, tu carne favorita, lechuga, queso fresco y crema. Fried thick tortilla with bean, your choice of meat, lettuce, fresch cheese, sour cream and tomatoes.</string>

    <string name="tostadas">Tostadas</string>
    <string name="tostadasdesc">Tortilla frita cno frijoles, tu carne favorita, lechuga, queso fresco, crema y jitomate. Fried tortilla with beans, your choice of meat, lettuce, fresh cheese, sour cream and tomatoes.</string>


    <!--Precios-->


    <string name="antojitos">Antojitos</string>
    <string name="especialidades">Especialidades</string>
    <string name="caldos">Caldos</string>
    <string name="combinations">Combinations</string>
    <string name="tortas">Tortas</string>
    <string name="sopas">Sopas</string>
    <string name="sideOrders">SideOrders</string>
    <string name="drinks">Drinks</string>
    <string name="carrito">Carrito</string>
    <string name="guionmedio">-</string>
    <string name="simbolomas">+</string>
    <string name="precio">Precio</string>
    <string name="descripcion">Descripción</string>
    <string name="_0">0</string>
    <string name="imagen_producto">Imagen producto</string>
    <string name="imagen_menu">Imagen Menu</string>
    <string name="comprar">Comprar</string>
    <string name="total">Total</string>

</resources>