<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/producto_img"
        android:contentDescription="@string/imagen_producto"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:src="@drawable/tacos"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription=""
        android:layout_weight="3"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/nombre_producto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tacos"
            />
        <TextView
            android:id="@+id/descripcion_producto"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/descripcion"
            />
    </LinearLayout>

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:stretchColumns="4">

        <TableRow>
            <TextView
                android:id="@+id/espacio1"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text=""
                />

            <TextView
                android:id="@+id/cantidad"
                android:layout_width="60dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/cantidad"
                />

            <TextView
                android:id="@+id/espacio2"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text=""
                />

            <TextView
                android:id="@+id/precio"
                android:layout_width="50dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/precio"
                />

        </TableRow>

        <TableRow>
            <Button
                android:id="@+id/btn_mas"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:backgroundTint="@color/fondoRojo"
                android:text="@string/simbolomas"/>
            <TextView
                android:id="@+id/cantidad_producto"
                android:layout_width="50dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/_0"
                />
            <Button
                android:id="@+id/btn_menos"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:backgroundTint="@color/fondoRojo"
                android:text="@string/guionmedio"/>

            <TextView
                android:id="@+id/precio_producto"
                android:layout_width="50dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/_0"
                />
        </TableRow>


    </TableLayout>




</LinearLayout>

