<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondoAmarillo"
    android:orientation="vertical"
    tools:context=".CarritoActivity">



    <!--cambiar tamaño de la imagen-->
    <ImageView
        android:id="@+id/imgMenu"
        android:contentDescription="@string/imagen_menu"
        android:layout_width="200dp"
        android:layout_height="180dp"
        android:layout_gravity="center"
        android:src="@drawable/logotacos"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:layout_marginTop="25dp"
        android:textColor="@color/fondoRojo"
        android:fontFamily="sans-serif-light"
        android:text="@string/carrito"
        android:textAlignment="center"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_comprar"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/fondoRojo"
        android:text="@string/comprar"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="2">

        <TableRow>
            <TextView
                android:id="@+id/total"
                android:layout_width="50dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/total"
                />

            <TextView
                android:id="@+id/totalNum"
                android:layout_width="50dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/_0"
                />
        </TableRow>
    </TableLayout>

    <ListView
        android:id="@+id/listview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        />



</LinearLayout>